# sudoku_solver

./: .gitignore  Cargo.toml  README.md  app.py  flake.nix  input.txt  pyproject.toml  sudoku_paper.md  visualizer.py
benches/: benchmark.rs
src/: helper.rs  lib.rs  log.rs  main.rs  solver.rs  types.rs
src/gui/: graph.html
src/solver/: graph.rs  masks.rs  mod.rs  permutations.rs
src/types/: board.rs  graph.rs  masks.rs  minigrid.rs  mod.rs
src/types/graph/: compatibility.rs  mod.rs  node.rs  relationship.rs  visualize.rs
src/types/masks/: bitstring.rs  mod.rs
sudoku/: __main__.py  board.py
