[package]
name = "sudoku_solver"
version = "0.1.0"
edition = "2024"

[lib]
name = "solver"
path = "src/lib.rs"

[[bin]]
name = "sudoku_solver"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
fern = "0.7.1"
log = "0.4.29"
rayon = "1.8"                                      # Lock-free parallelism
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.8.1" # Benchmarking

[[bench]]
name = "benchmark"
harness = false

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
debug = true      # Required for flamegraphs
